# codesense

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
codesense/: __init__.py  __main__.py  interfaces.py  main.py
codesense/agent/: __init__.py  check_contradictions.py  graph.py  nodes.py  router.py
codesense/analysis/: __init__.py  ast_walker.py  call_graph.py  import_scanner.py
codesense/capabilities/: __init__.py  ask.py  deps.py  describe.py  diagram.py  explain.py  flow.py  onboard.py  related.py  risk.py  trace.py  tree.py
codesense/llm/: __init__.py  gemini_service.py  key_manager.py
codesense/mcp_server/: __init__.py  git_source.py  server.py
codesense/memory/: __init__.py  chunker.py  embedder.py  ingest.py  vector_store.py
codesense/models/: __init__.py  analysis.py  llm.py  mcp.py  memory.py  output.py  state.py
codesense/output/: __init__.py  formatter.py  markdown_writer.py  mermaid_formatter.py  tree_formatter.py
codesense/sources/: __init__.py  github_source.py  mock_source.py
codesense/stubs/: __init__.py
docs/: CodeSense_Project_Report.md  generate_pdf.py
tests/: __init__.py
tests/fixtures/: mock_commits.json  mock_issues.json  mock_pr_comments.json  mock_related_files.json
tests/integration/: test_mcp_server.py
tests/property/: test_call_graph_properties.py  test_chunker_properties.py  test_classification_properties.py  test_conflict_properties.py  test_demo_mode_properties.py  test_key_rotation_properties.py  test_mcp_limits_properties.py  test_mermaid_properties.py  (+4 more)
(+34 files in other folders)
