[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesense"
version = "0.1.0"
description = "A CLI tool that answers WHY code exists using multi-agent reasoning"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "fastmcp>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "gitpython>=3.1.0",
    "PyGithub>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
codesense = "codesense.main:app"

[tool.setuptools.packages.find]
include = ["codesense*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
